--- a/my-first-app/src/app/server/server.component.html
+++ b/my-first-app/src/app/server/server.component.html
@@ -1,1 +1,6 @@
-<p>{{ "Hello" }} server id is {{ serverId }} is {{ serverStatus }}</p>
+<p
+  [ngStyle]="{ backgroundColor: getColor() }"
+  [ngClass]="{ online: serverStatus === 'online' }"
+>
+  {{ "Hello" }} server id is {{ serverId }} is {{ serverStatus }}
+</p>
