--- a/cmp-databinding-start/src/app/app.component.html
+++ b/cmp-databinding-start/src/app/app.component.html
@@ -3,9 +3,17 @@
   <hr />
   <div class="row">
     <div class="col-xs-12">
+      <button (click)="onChangeFirst()" class="btn btn-primary">Change First Element</button>
       <app-server-element
-        *ngFor="let serverElement of serverElements" [srvElement]="serverElement"
-      ></app-server-element>
+        *ngFor="let serverElement of serverElements"
+        [name] = "serverElement.name">
+        <p>
+          <strong *ngIf="serverElement.type === 'server'" style="color: red;">{{
+            serverElement.content
+          }}</strong>
+          <em *ngIf="serverElement.type === 'blueprint'">{{ serverElement.content }}</em>
+        </p>
+      </app-server-element>
     </div>
   </div>
 </div>
