--- a/main-project/src/app/header/header.component.html
+++ b/main-project/src/app/header/header.component.html
@@ -1,12 +1,14 @@
 <nav class="navbar navbar-default">
   <div class="div container-fluid">
     <div class="navbar-header">
-      <a routerLink="/" class="navbar-brand">Recipe Book</a>
+      <a href="#" class="navbar-brand">Recipe Book</a>
     </div>
     <div class="navbar-default">
       <ul class="nav navbar-nav">
-        <li><a href="#" (click) = "onSelect('recipe')">Recipe</a></li>
-        <li><a href="#" (click) = "onSelect('shopping-list')">Shopping List</a></li>
+        <li><a href="#" (click)="onSelect('recipe')">Recipe</a></li>
+        <li>
+          <a href="#" (click)="onSelect('shopping-list')">Shopping List</a>
+        </li>
       </ul>
       <ul class="nav nav-bar navbar-right">
         <li class="dropdown">
