--- a/directives-start/src/app/app.component.html
+++ b/directives-start/src/app/app.component.html
@@ -6,36 +6,27 @@
         (click)="onlyOdd = !onlyOdd">Only show odd numbers</button>
       <br><br>
       <ul class="list-group" >
-        <div class="" *ngIf="onlyOdd">
-        <li
-          class="list-group-item"
-          *ngFor = "let odd of oddNumbers"
-          [ngClass] = "{odd: odd % 2 !== 0}"
-          [ngStyle] = "{backgroundColor: odd % 2 !== 0? 'yellow': 'transparent'}">
-          {{ odd}}
-        </li>
-      </div>
-      <!-- <div class="" *ngIf="!onlyOdd">
-        <li
-          class="list-group-item"
-          *ngFor = "let even of evenNumbers"
-          [ngClass] = "{odd: even % 2 !== 0}"
-          [ngStyle] = "{backgroundColor: even % 2 !== 0? 'yellow': 'transparent'}">
-          {{ even}}
-        </li>
-      </div> -->
-      <div class="" *appUnless="onlyOdd">
-        <li
-          class="list-group-item"
-          *ngFor = "let even of evenNumbers"
-          [ngClass] = "{odd: even % 2 !== 0}"
-          [ngStyle] = "{backgroundColor: even % 2 !== 0? 'yellow': 'transparent'}">
-          {{ even}}
-        </li>
-      </div>
+        <div *ngIf = "onlyOdd" >
+          <li
+            class="list-group-item"
+            *ngFor = "let odd of oddNumbers"
+            [ngClass] = "{odd: odd % 2 !== 0}"
+            [ngStyle] = "{backgroundColor: odd % 2 !== 0 ? 'yellow': 'transparent'}" >
+            {{odd}}
+          </li>
+        </div>
+        <div *ngIf = "!onlyOdd">
+          <li
+            class="list-group-item"
+            *ngFor = "let even of evenNumbers"
+            [ngClass] = "{even: odd % 2 !== 0}"
+            [ngStyle] = "{backgroundColor: even % 2 !== 0 ? 'yellow': 'transparent'}">
+            {{even}}
+          </li>
+        </div>
       </ul>
-      <p appBasicHighlight >Style me with basic highlight</p>
-      <p [appBetterHighlight]="'red'" [defaultColor]="'yellow'" >Style me with better highlight</p>
+      <p appBasicHighlight >Style me with basic directive</p>
+      <p [appBetterHighlight]="'red'" [defaultColor] = "'yellow'" >Style me with better directive</p>
     </div>
   </div>
 </div>
