--- a/main-project/src/app/shopping-list/shopping-list.component.html
+++ b/main-project/src/app/shopping-list/shopping-list.component.html
@@ -1,7 +1,5 @@
 <div class="row col-xs-10">
-  <app-shopping-edit
-    (ingredientAdded)="onIngredientAdded($event)"
-  ></app-shopping-edit>
+  <app-shopping-edit></app-shopping-edit>
   <hr />
   <ul class="list-group">
     <a
