--- a/main-project/src/app/header/header.component.html
+++ b/main-project/src/app/header/header.component.html
@@ -5,9 +5,9 @@
     </div>
     <div class="navbar-default">
       <ul class="nav navbar-nav">
-        <li><a href="#" (click)="onSelect('recipe')">Recipe</a></li>
+        <li><a [RouterLink] = "'[recipe]'" (click)="onSelect('recipe')">Recipe</a></li>
         <li>
-          <a href="#" (click)="onSelect('shopping-list')">Shopping List</a>
+          <a [RouterLink] = "'[shopping-list]'" (click)="onSelect('shopping-list')">Shopping List</a>
         </li>
       </ul>
       <ul class="nav nav-bar navbar-right">
