--- a/main-project/src/app/header/header.component.html
+++ b/main-project/src/app/header/header.component.html
@@ -1,23 +1,23 @@
 <nav class="navbar navbar-default">
   <div class="div container-fluid">
     <div class="navbar-header">
-      <a href="#" class="navbar-brand">Recipe Book</a>
+      <a href="" class="navbar-brand">Recipe Book</a>
     </div>
     <div class="navbar-default">
       <ul class="nav navbar-nav">
-        <li><a [RouterLink] = "'[recipe]'" (click)="onSelect('recipe')">Recipe</a></li>
-        <li>
-          <a [RouterLink] = "'[shopping-list]'" (click)="onSelect('shopping-list')">Shopping List</a>
+        <li routerLinkActive = "active" ><a routerLink = "/recipes" >Recipe</a></li>
+        <li routerLinkActive = "active" >
+          <a [routerLink] = "['/shopping-list']" >Shopping List</a>
         </li>
       </ul>
       <ul class="nav nav-bar navbar-right">
         <li class="dropdown" appDropdown>
-          <a href="#" class="dropdown-toggle" role="button"
+          <a style = "cursor: pointer;" class="dropdown-toggle" role="button"
             >Manage <span class="caret"></span
           ></a>
           <ul class="dropdown-menu">
-            <li><a href="#" class="">Save Data</a></li>
-            <li><a href="#" class="">Fetch Data</a></li>
+            <li><a style = "cursor: pointer;" class="">Save Data</a></li>
+            <li><a style = "cursor: pointer;" class="">Fetch Data</a></li>
           </ul>
         </li>
       </ul>
