--- a/main-project/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/main-project/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -20,9 +20,9 @@
         Manage Recipe <span class="caret"></span>
       </button>
       <ul class="dropdown-menu">
-        <li><a href="#" (click) = "onAddToShoppingList()" style = "cursor: pointer;" #nameInput>To Shopping List</a></li>
-        <li><a href="#" #amountInput>Edit Recipe</a></li>
-        <li><a href="#">Delete Recipe</a></li>
+        <li><a (click) = "onAddToShoppingList()" style = "cursor: pointer;" #nameInput>To Shopping List</a></li>
+        <li><a style = "cursor: pointer;" #amountInput>Edit Recipe</a></li>
+        <li><a style = "cursor: pointer;" >Delete Recipe</a></li>
       </ul>
     </div>
   </div>
