--- a/main-project/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/main-project/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -21,7 +21,7 @@
       </button>
       <ul class="dropdown-menu">
         <li><a (click) = "onAddToShoppingList()" style = "cursor: pointer;" #nameInput>To Shopping List</a></li>
-        <li><a style = "cursor: pointer;" #amountInput>Edit Recipe</a></li>
+        <li><a style = "cursor: pointer;" #amountInput (click) = "onEditRecipe()">Edit Recipe</a></li>
         <li><a style = "cursor: pointer;" >Delete Recipe</a></li>
       </ul>
     </div>
